# python-boilerplate

./: .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: test-and-lint-backend.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/.github/workflows/: lint-backend.yml  test-backend.yml
backend/app/: main.py
backend/app/tests/: test_main.py
