[project]
name = "python-boilerplate-with-uv-and-docker"
version = "0.1.0"
description = "Python Boilerplate with UV, Docker, Ruff, Pytest & pre-commit"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.4",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv"] # "alembic"

[tool.ruff]
target-version = "py310"
exclude = [] # "alembic"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
